<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/network_error_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@id/network_error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_error_icon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/network_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oh_no"
        android:textAppearance="@style/heading_small_light"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="@id/network_error_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/network_error_image" />

    <TextView
        android:id="@+id/network_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error_message"
        android:textAppearance="@style/body_medium"
        app:layout_constraintBottom_toTopOf="@id/retry_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/network_error_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_marginTop="@dimen/mg_8"
        android:clickable="true"
        android:padding="@dimen/pd_8"
        android:textAppearance="@style/body_medium_bold"
        android:textColor="@color/link_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/network_error_message" />


</androidx.constraintlayout.widget.ConstraintLayout>