<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/pd_16"
            android:paddingTop="@dimen/pd_32"
            android:paddingEnd="@dimen/pd_16">

            <ImageView
                android:id="@+id/market_img"
                android:layout_width="@dimen/ic_market_size"
                android:layout_height="@dimen/ic_market_size"
                android:src="@drawable/ic_market"
                app:layout_constraintBottom_toTopOf="@id/search_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mg_16"
                android:ellipsize="none"
                android:text="@string/search_title"
                android:textAppearance="@style/heading_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/market_img" />

            <TextView
                android:id="@+id/search_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mg_8"
                android:text="@string/search_subtitle"
                android:textAppearance="@style/heading_small"
                android:textSize="@dimen/text_big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mg_24"
                android:layout_marginBottom="@dimen/mg_24"
                android:autofillHints="@string/search_hint"
                android:backgroundTint="?colorPrimary"
                android:hint="@string/search_hint"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:imeOptions="actionSearch"
                android:textCursorDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/search_tags_recyclerview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_subtitle" />

            <com.gabo.finder.common.components.StateView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/state_view"
                app:layout_constraintTop_toTopOf="@id/search_tags_recyclerview"
                app:targetView="@id/search_tags_recyclerview"
                app:showErrorImage="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_tags_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_input" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:id="@+id/footer"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mg_16"
            android:layout_marginEnd="@dimen/mg_16"
            style="@style/button_primary_round"
            android:layout_marginBottom="@dimen/mg_16"
            android:id="@+id/search_button"
            android:layout_marginTop="@dimen/mg_16"
            android:text="@string/search_label"/>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>